# poppy

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: annotated.html  annotated_dup.js  classes.html  classpoppy_1_1_buffer-members.html  classpoppy_1_1_buffer.html  classpoppy_1_1_buffer.js  classpoppy_1_1_dict-members.html  classpoppy_1_1_dict.html  classpoppy_1_1_dict.js  classpoppy_1_1_func-members.html  classpoppy_1_1_func.html  classpoppy_1_1_func.js  classpoppy_1_1_g_i_l_context-members.html  classpoppy_1_1_g_i_l_context.html  classpoppy_1_1_g_i_l_context.js  classpoppy_1_1_generic-members.html  classpoppy_1_1_generic.html  classpoppy_1_1_generic.js  classpoppy_1_1_list-members.html  classpoppy_1_1_list.html  classpoppy_1_1_list.js  classpoppy_1_1_object-members.html  classpoppy_1_1_object.html  classpoppy_1_1_object.js  classpoppy_1_1_tuple-members.html  classpoppy_1_1_tuple.html  classpoppy_1_1_tuple.js  classpoppy_1_1_value-members.html  classpoppy_1_1_value.html  classpoppy_1_1_value.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  (+18 more)
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  related_0.js  related_1.js  related_2.js  related_3.js  related_5.js  (+4 more)
samples/: CMakeLists.txt
samples/01_echo/: 01_echo.py  CMakeLists.txt  README.md  main.cpp
samples/02_calc/: CMakeLists.txt  README.md  main.cpp
samples/03_numpy/: 03_numpy.py  CMakeLists.txt  README.md  main.cpp
samples/04_struct/: 04_struct.py  CMakeLists.txt  README.md  main.cpp
samples/05_class/: CMakeLists.txt  README.md  main.cpp
samples/06_thread/: 06_thread.py  CMakeLists.txt  README.md  main.cpp
samples/07_venv/: 07_venv.py  CMakeLists.txt  README.md  main.cpp
scripts/: 01_echo.py  05_class.py
src/: CMakeLists.txt
src/include/: poppy.h
src/src/: buffer.cpp  dict.cpp  func.cpp  generic.cpp  gil.cpp  list.cpp  object.cpp  poppy.cpp  tuple.cpp  value.cpp
tests/: CMakeLists.txt  script.py  test_cast.cpp  test_dict.cpp  test_echo.cpp  test_list.cpp  test_receive.cpp  test_root.h  test_thread.cpp  test_tuple.cpp  test_value.cpp
